--- a/demo/src/app/components/demo.component.html
+++ b/demo/src/app/components/demo.component.html
@@ -1,8 +1,8 @@
 <p>排版问题，以下只是示例，关于使用方法见README.md。</p>
 <h1>文本型</h1>
 <textarea [(ngModel)]="text"></textarea>
-<button type="button" (click)="onDown('txt')">Save Text</button>
-<button type="button" (click)="onDown('json')">Save JSON</button>
+<button type="button" (click)="onDown('txt', false)">Save Text</button>
+<button type="button" (click)="onDown('json', false)">Save JSON</button>
 
 <h1>远程文件下载</h1>
 <button type="button" (click)="onDown('docx', true)">Save Word</button>
