feat: support angular6, releases: 2.0.0

--- a/src/app/components/demo.component.html
+++ b/src/app/components/demo.component.html
@@ -1,4 +1,4 @@
-<p>排版问题，以下只是示例，关于使用方法见README.md。</p>
+<p>排版问题，以下只是示例，关于使用方法见<a href="https://github.com/cipchk/ngx-filesaver/blob/master/README.md" target="_blank">README.md</a>。</p>
 <h1>文本型</h1>
 <textarea [(ngModel)]="text"></textarea>
 <button type="button" (click)="onDown('txt', false)">Save Text</button>
